--- a/_posts/2010-07-09-cool-things-to-do-emacs-dired.html
+++ b/_posts/2010-07-09-cool-things-to-do-emacs-dired.html
@@ -16,7 +16,7 @@ files is quick and easy.  </p>
 <h2 id="sec-1_1_2">Viewing Pdfs in Emacs </h2>
 
 <p>If you see a pdf with an uninformative name like 2010-09.pdf just
-hit &lt;<b>enter</b>&gt; when the cursor is on the file name, (when
+hit <<b>enter</b>&gt; when the cursor is on the file name, (when
 the file name is at point). Emacs will open the pdf in a new
 buffer. Once you have viewed the pdf and have decided its face you can
 quickly kill the pdf buffer with '<b>k</b>' and you'll be returned to
@@ -46,7 +46,7 @@ the file name, you can quickly queue them all for deletion by typing '<b>~</b>'.
 <tr><th scope="col" class="left">key combo</th><th scope="col" class="left">command</th></tr>
 </thead>
 <tbody>
-<tr><td class="left">&lt;enter&gt;</td><td class="left">open file at point</td></tr>
+<tr><td class="left"><enter&gt;</td><td class="left">open file at point</td></tr>
 
 <tr><td class="left">d</td><td class="left">Queue File For Deletion</td></tr>
 <tr><td class="left">u</td><td class="left">Unqueue File</td></tr>
@@ -66,7 +66,7 @@ the file name, you can quickly queue them all for deletion by typing '<b>~</b>'.
 <h2 id="sec-1_3">Edit Zip'd or Tar-gz'd archives in place </h2>
 
 <p>If you need to edit a file inside a zip or tar archive, simply open
-the archive by hitting &lt;enter&gt; on the name in Dired mode, then
+the archive by hitting <enter&gt; on the name in Dired mode, then
 click on the file. Edit the file and save it with '<b>C-x C-s</b>',
 and then do another <b>C-x C-s</b> inside the zip buffer to save the
 archive with the file changes. The archive will be compressed again
