--- a/_posts/2011-11-23-apache-notes.html
+++ b/_posts/2011-11-23-apache-notes.html
@@ -67,11 +67,11 @@ category: Web Development
 
 
 
-{% highlight bash %}&lt;VirtualHost *:80&gt;  
+{% highlight bash %}<VirtualHost *:80&gt;  
   ServerName majorursa.net
   ServerAlias www.majorursa.net
   DocumentRoot /var/www/majorursalia/
-&lt;/VirtualHost&gt;   
+</VirtualHost&gt;   
 {% endhighlight %}
 
 
@@ -86,17 +86,17 @@ category: Web Development
 
 
 
-{% highlight bash %}&lt;VirtualHost *:80&gt;  
+{% highlight bash %}<VirtualHost *:80&gt;  
   ServerName majorursa.net
   ServerAlias www.majorursa.net
   DocumentRoot /var/www/majorursalia/drupal-6.22
-  &lt;Directory /var/www/majorursalia/drupal-6.22/&gt;
+  <Directory /var/www/majorursalia/drupal-6.22/&gt;
     AllowOverride All
     Options None
     Order allow,deny
     Allow from all
-  &lt;/Directory&gt; 
-&lt;/VirtualHost&gt;   
+  </Directory&gt; 
+</VirtualHost&gt;   
 {% endhighlight %}
 
 
