--- a/_posts/2012-01-27-vim-tip-yanking-text.html
+++ b/_posts/2012-01-27-vim-tip-yanking-text.html
@@ -46,5 +46,5 @@ The vim command :bn, means switch to the next buffer.  You could also run the co
 
 7. If you'd like to reload the database into mysql use the following:
 {% highlight bash %}
-mysql -p &lt; newdumpfile.sql
+mysql -p < newdumpfile.sql
 {% endhighlight %}
