--- a/_posts/2012-02-23-vim-notes.html
+++ b/_posts/2012-02-23-vim-notes.html
@@ -40,7 +40,7 @@ category: Vim
 <tr><td class="left">cw</td><td class="left">change word</td></tr>
 <tr><td class="left">u</td><td class="left">undo!</td></tr>
 <tr><td class="left">i</td><td class="left">insert mode</td></tr>
-<tr><td class="left">&lt;Esc&gt;</td><td class="left">escape, exit insert mode</td></tr>
+<tr><td class="left"><Esc&gt;</td><td class="left">escape, exit insert mode</td></tr>
 <tr><td class="left">/VirtualHost</td><td class="left">search file for phrase "VirtualHost"</td></tr>
 <tr><td class="left">n</td><td class="left">move to next occurence of search phrase</td></tr>
 <tr><td class="left">100G</td><td class="left">move to 100th line</td></tr>
