--- a/_posts/2012-04-14-sas-to-r.html
+++ b/_posts/2012-04-14-sas-to-r.html
@@ -65,7 +65,7 @@ Analysis of Variance Table
 Response: V4
            Df  Sum Sq Mean Sq F value    Pr(&gt;F)    
 V1          1   0.567  0.5669  1.8709  0.172001    
-V2          1  26.488 26.4877 87.4135 &lt; 2.2e-16 ***
+V2          1  26.488 26.4877 87.4135 < 2.2e-16 ***
 V3          1   9.096  9.0964 30.0194 6.839e-08 ***
 V5          1   2.446  2.4459  8.0717  0.004683 ** 
 V6          1   1.032  1.0324  3.4069  0.065524 .  
@@ -119,7 +119,7 @@ codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 Residual standard error: 0.5505 on 492 degrees of freedom
 Multiple R-squared: 0.2112, Adjusted R-squared:   0.2 
-F-statistic: 18.82 on 7 and 492 DF,  p-value: &lt; 2.2e-16
+F-statistic: 18.82 on 7 and 492 DF,  p-value: < 2.2e-16
 
 {% endhighlight %}
 
