updated some posts and the index

--- a/_posts/2012-03-18-notes-on-drupal-features.html
+++ b/_posts/2012-03-18-notes-on-drupal-features.html
@@ -3,6 +3,7 @@ layout: post
 title: Notes on Drupal Features
 tags: drupal
 category: Drupal
+description: How to use Features to help keep your drupal site's configuration in Version Control.
 ---
 One of the difficulties of keeping a Drupal website completely in version control, is that a lot of the configuration is stored in the database. Each change you make to a site via clicking and saving on a site administration page is saved in the database. It is difficult to keep a history of these changes without writing the entire database to a file and then checking that into version control. But you don't want to commit an entire database into git. This is where the Features module comes into play. It helps separate the site's configuration in the database from the site's content.
 
@@ -20,6 +21,7 @@ This will download a new module to your desktop with the configuration options s
 To revert a feature is to take the configuration options that are written in a custom feature module and override the database configuration.
 
 Revert a feature with drush
+
 {% highlight bash %}
 drush features-revert  mu_bartik_theme
 {% endhighlight %}
@@ -30,6 +32,7 @@ The above code would read the configuration options from the code in the mu_bart
 To override a feature, means to take the configuration that is currently in the database and use those options to override the previous custom feature module you created. This basically updates the old feature module with what is currently live on the site and in the database. Then you will be able to download an updated feature module and can commit this new change to your git repository so you have a history of site changes, upload the changed feature module <b>mu_bartik_theme</b> to your site and (ahem revert the change again).
 
 Here's the drush command to override a feature
+
 {% highlight bash %}
 drush features-override mu_bartik_theme
 {% endhighlight %}
