--- a/_posts/2012-04-02-sas-notes.html
+++ b/_posts/2012-04-02-sas-notes.html
@@ -3,6 +3,7 @@ layout: post
 title: Notes on SAS
 tags: sas data 
 category: Data Analysis
+description: Notes from my Regression Analysis class on using SAS for data analysis.
 ---
 
 <h2>The Data Step</h2>
