--- a/_posts/2012-04-14-sas-to-r.html
+++ b/_posts/2012-04-14-sas-to-r.html
@@ -3,6 +3,7 @@ layout: post
 title: SAS to R Notes
 tags: sas data  R
 category: Data Analysis
+description: Using R to test if data follows a Linear Regression Model.
 ---
 <h2 id="sec-1">How I did part of a SAS assignment in R</h2>
 <div class="outline-text-2" id="text-1">
