--- a/_posts/2012-04-12-vim-emacs-regex.html
+++ b/_posts/2012-04-12-vim-emacs-regex.html
@@ -3,6 +3,7 @@ layout: post
 title: Vim Emacs Regex Smackdown
 tags: vim emacs
 category: Vim
+description: Using vim regular expressions to to a tricky translation from org-mode to html.
 ---
 So, I was trying to convert an orgmode file to html. There is an orgmode-export-as-html function, but it was choking on something, so I needed to do the conversion by hand. I tried many, many times to convert the file with emacs regular expressions, but was unsuccessful.  The difficulty was the orgmode headlines, which look like this:
 
@@ -45,3 +46,5 @@ Your matches will be highlighted.  Click 'n' to jump to the next match.
 
 <h2>Getting back to previous substitution</h2>
 Vim has a cool, intuitive way to explore your command history. In command mode, type ":" as for typing an ex command, and then press the up arrow to scroll up to through your command history. This is really handy for using previous, complex regular expressions.
+
+
