--- a/_posts/2012-04-14-sas-to-r.html
+++ b/_posts/2012-04-14-sas-to-r.html
@@ -52,19 +52,20 @@ abline(0,0)
 
 
 
+Here is R's ANOVA command. Run it on the regression model gpa.fit.
 
 {% highlight r %}
 anova(gpa.fit)
 {% endhighlight %}
 
 
-
+Here is the output of the ANOVA command.
 
 {% highlight r %}
 Analysis of Variance Table
 
 Response: V4
-           Df  Sum Sq Mean Sq F value    Pr(&gt;F)    
+           Df  Sum Sq Mean Sq F value    Pr(> F)    
 V1          1   0.567  0.5669  1.8709  0.172001    
 V2          1  26.488 26.4877 87.4135 < 2.2e-16 ***
 V3          1   9.096  9.0964 30.0194 6.839e-08 ***
@@ -106,7 +107,7 @@ Residuals:
 -3.3345 -0.3387 -0.0059  0.3429  1.9661 
 
 Coefficients:
-              Estimate Std. Error t value Pr(&gt;|t|)    
+              Estimate Std. Error t value Pr(> |t|)    
 (Intercept)  1.7792451  0.5165056   3.445  0.00062 ***
 V1          -0.0383924  0.0527532  -0.728  0.46710    
 V2           0.2716557  0.0417213   6.511 1.84e-10 ***
@@ -127,3 +128,7 @@ F-statistic: 18.82 on 7 and 492 DF,  p-value: < 2.2e-16
 
 </div>
 </div>
+
+The stars in R's output are the signoificance code.  In the above
+summary output, V2, V3, V4 are very significant. V1, V7, and V8 are
+not very significant; the regression model should be tested without them.
